fixes pro plan not showing on narrow viewports

--- a/scss/phase3/_mt-c-pricing.scss
+++ b/scss/phase3/_mt-c-pricing.scss
@@ -58,5 +58,6 @@
   flex: 14%;
   @media (max-width: 590px) {
     order: -1;
+    flex: 1;
   }
 }
